# subtitle-converter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start_translator.sh
.instructions/: GENERALIZATION_SUMMARY.md  README.md
.instructions/agents/: README.md
.instructions/agents/aws/: aws-architect.mdc  aws-security-analyst.mdc
.instructions/agents/azure/: azure-architect.mdc  azure-reliability-engineer.mdc  azure-security-analyst.mdc  azure-terraform-expert.mdc
.instructions/agents/gcp/: gcp-architect.mdc  gcp-reliability-engineer.mdc  gcp-security-analyst.mdc
.instructions/agents/kubernetes/: kubernetes-expert.mdc
.instructions/agents/orchestrator/: vibe-commander.mdc
.instructions/agents/powershell/: powershell-automation-engineer.mdc
.instructions/agents/process/: git-expert.mdc  spec-lead.mdc
.instructions/agents/sre/: sre-lead.mdc
.instructions/agents/technical-writer/: technical-writer.mdc
.instructions/agents/windows/: windows-automation-expert.mdc  (+2 more)
.instructions/rules/: 00-system-overview.mdc  01-software-engineering-expert.mdc.example  02-sre-expert.mdc.example  03-devops-expert.mdc.example  05-entra-id-expert.mdc.example  base.mdc  git-conventions.mdc  powershell-standards.mdc  powershell.mdc  python.mdc  system-context.mdc  terraform.mdc  typescript.mdc  windows-server.mdc.example
.instructions/skills/: README.md
src/: main.py  opensubtitles.py  setup_unrar.py  srt_utils.py  subdl.py  translator.py
static/: index.html
static/css/: style.css
static/js/: app.js
(+46 files in other folders)
